force-app/main/default/objects/Supplier_Invoice__c/Supplier_Invoice__c.object-meta.xml
<CustomObject>
    <label>Beszállítói számla</label>
    <pluralLabel>Beszállítói számlák</pluralLabel>
    <nameField>
        <label>Számla megnevezése</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>