force-app/main/default/objects/Supplier_Invoice__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <label>Jóváhagyási státusz</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Betöltve</fullName>
                <default>true</default>
                <label>Betöltve</label>
            </value>
            <value>
                <fullName>Területvezetői jóváhagyásra vár</fullName>
            </value>
            <value>
                <fullName>Pénzügyi igazgatói jóváhagyásra vár</fullName>
            </value>
            <value>
                <fullName>Jóváhagyva</fullName>
            </value>
            <value>
                <fullName>Elutasítva</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>