force-app/main/default/objects/Supplier_Invoice__c/fields/Area_Approver__c.field-meta.xml
<CustomField>
    <fullName>Area_Approver__c</fullName>
    <label>Terület jóváhagyója</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>Approver_Supplier_Invoices</relationshipName>
    <relationshipLabel>Jóváhagyandó beszállítói számlák</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>