force-app/main/default/objects/Supplier_Invoice__c/fields/Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>Cost_Center__c</fullName>
    <label>Költséghely</label>
    <type>Lookup</type>
    <referenceTo>Cost_Center__c</referenceTo>
    <relationshipName>Supplier_Invoices</relationshipName>
    <relationshipLabel>Beszállítói számlák</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>