force-app/main/default/objects/Supplier_Invoice__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <label>Fizetési határidő</label>
    <type>Date</type>
</CustomField>