force-app/main/default/objects/Supplier_Invoice__c/fields/Fulfillment_Date__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Date__c</fullName>
    <label>Teljesítés kelte</label>
    <type>Date</type>
</CustomField>