force-app/main/default/objects/Supplier_Invoice__c/fields/Gross_Amount__c.field-meta.xml
<CustomField>
    <fullName>Gross_Amount__c</fullName>
    <label>Bruttó összeg</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>