force-app/main/default/objects/Supplier_Invoice__c/fields/Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Issue_Date__c</fullName>
    <label>Kiállítás kelte</label>
    <type>Date</type>
</CustomField>