force-app/main/default/objects/Supplier_Invoice__c/fields/Orderer__c.field-meta.xml
<CustomField>
    <fullName>Orderer__c</fullName>
    <label>Megrendelő</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Nagy Anna</fullName>
            </value>
            <value>
                <fullName>Kiss Péter</fullName>
            </value>
            <value>
                <fullName>Szabó Júlia</fullName>
            </value>
            <value>
                <fullName>Tóth Gábor</fullName>
            </value>
            <value>
                <fullName>Egyéb</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>