force-app/main/default/objects/Supplier_Invoice__c/fields/Service_Description__c.field-meta.xml
<CustomField>
    <fullName>Service_Description__c</fullName>
    <label>Szolgáltatás megnevezése</label>
    <type>Text</type>
    <length>255</length>
</CustomField>