force-app/main/default/objects/Supplier_Invoice__c/fields/Source_ContentVersion_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_ContentVersion_Id__c</fullName>
    <label>Forrás dokumentum (ContentVersion Id)</label>
    <type>Text</type>
    <length>18</length>
</CustomField>