force-app/main/default/objects/Supplier_Invoice__c/fields/Supplier_Account__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Account__c</fullName>
    <label>Beszállító (Account)</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipName>Supplier_Invoices</relationshipName>
    <relationshipLabel>Beszállítói számlák</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>