force-app/main/default/objects/Supplier_Invoice__c/fields/Supplier_Contact__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Contact__c</fullName>
    <label>Beszállító (Contact)</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Supplier_Invoices</relationshipName>
    <relationshipLabel>Beszállítói számlák</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>