force-app/main/default/objects/Supplier_Invoice__c/fields/Supplier_Name__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Name__c</fullName>
    <label>Beszállító neve (snapshot)</label>
    <type>Text</type>
    <length>255</length>
</CustomField>