force-app/main/default/objects/Supplier_Invoice__c/fields/Supplier_VAT_Number__c.field-meta.xml
<CustomField>
    <fullName>Supplier_VAT_Number__c</fullName>
    <label>Beszállító adószáma (snapshot)</label>
    <type>Text</type>
    <length>20</length>
</CustomField>