force-app/main/default/objects/Supplier_Invoice__c/fields/Version_Number__c.field-meta.xml
<CustomField>
    <fullName>Version_Number__c</fullName>
    <label>Verziószám</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>