force-app/main/default/objects/Supplier_Invoice__c/validationRules/Megrendelo_es_Koltseghely_kotelezo_jovah.validationRule-meta.xml
<ValidationRule>
    <fullName>Megrendelo_es_Koltseghely_kotelezo_jovah</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Approval_Status__c, &quot;Pénzügyi igazgatói jóváhagyásra vár&quot;),
  OR(
    ISBLANK(Cost_Center__c),
    ISBLANK(TEXT(Orderer__c))
  )
)</errorConditionFormula>
    <errorMessage>Jóváhagyás előtt kötelező kitölteni a Megrendelőt és a Költséghelyet.</errorMessage>
</ValidationRule>